--- a/app/assets/stylesheets/sections/_footer.sass
+++ b/app/assets/stylesheets/sections/_footer.sass
@@ -19,7 +19,6 @@
     input[type="email"]
       font-family: $pompiere
       width: 200px
-      height: 18px
 
     div
       float: left
@@ -49,7 +48,7 @@
         p
           width: 145px
           font-size: 18px
-          margin: 0 auto 10px
+          margin: 0 auto 10px        
 
     .footer-nav
       float: left
